--- a/src/app/modules/tematica/pages/tematica-pages/tematica-pages.component.css
+++ b/src/app/modules/tematica/pages/tematica-pages/tematica-pages.component.css
@@ -32,6 +32,10 @@
     justify-content: space-between;
 }
 
+.header__migas{
+    font-size: 12px;
+}
+
 .componente{
     font-size: 28px;
     font-weight: 700;
