--- a/src/app/shared/components/modal-contenido/modal-contenido.component.css
+++ b/src/app/shared/components/modal-contenido/modal-contenido.component.css
@@ -182,6 +182,12 @@ label{
     cursor: pointer;
 }
 
+.span__agrega{
+    font-size: 12px;
+    color: gray;
+    font-weight: 500;
+}
+
 .scale-up-center{
     animation:scale-up-center 0.4s; 
 }
