--- a/src/app/shared/components/modal-generico/modal-generico.component.css
+++ b/src/app/shared/components/modal-generico/modal-generico.component.css
@@ -37,12 +37,14 @@
 }
 
 .icono i{
+    color: black;
     width: 34px;
     height: 34px;
     line-height: 34px;    
     border-radius: 50%;
     display: block;
     text-align: center;
+    font-size: 20px;
 }
 
 .icono i:hover{
@@ -57,7 +59,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;    
     gap: 10px;
 }
 
@@ -69,6 +71,7 @@
     top: -20px;
     /* border: 1px solid red; */
     text-align: center;
+    
 }
 
 .espacio{
@@ -77,7 +80,9 @@
 }
 
 .icono__modal i{
-    font-size: 40px;
+    font-size: 36px;
+    background-color: white;
+    border-radius: 50%;
 }
 
 .texto__titulo{
